TypeORM öğrenmeye devam ediliyor.
